# ML-project

./: pyproject.toml
src/project_ml/RAG_projects/: document_RAG.py  e2e_ragapp.py  local_rag.py  qa_bot.py
