[project]
name = "project-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "rkg-37",email = "gupta2.rajkamal2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12 ,<4.0.0"
dependencies = [
    "langchain (>=1.2.8,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "fastapi (>=0.128.2,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "langchain-core (>=1.2.9,<2.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "chromadb (>=1.5.0,<2.0.0)",
    "transformers (>=5.1.0,<6.0.0)",
    "wget (>=3.2,<4.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-classic (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "gradio (>=6.5.1,<7.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pypdf (>=6.7.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "project_ml", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
